# output_checker

./: .env  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  README.md  conftest.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml  lint.yml  pylint.yml  release.yml
docs/: conf.py
docs/contributor_guide/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md
docs/structure/: README.md
docs/user_guide/: README.md
output_checker/: LICENSE  README.md
output_checker/docs/: conf.py
output_checker/docs/structure/: README.md
src/: disclosure_control_check.py  file_size_checks.py  file_type_check.py  scan_directory.py
src/disclosure_control_check/: __init__.py
src/make_data/: __init__.py
src/utils/: __init__.py
tests/: embedded_dictionary.py  test_disclosure_control_check.py  test_file_size_checks.py  test_file_type_check.py  test_make_data.py  test_scan_directory.py  test_utils.py
tests/test_code_directory_example/: fail_databricks_token  fail_embedded_dictionary.py  fail_tokens  fail_tokens.py
