[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# `coverage` configurations
[tool.coverage.run]
source = [
    "./src"
]

[tool.coverage.report]
exclude_lines = [
    "if __name__ == .__main__.:"
]

# `isort` configurations
[tool.isort]
profile = "black"

# `pytest` configurations
[tool.pytest.ini_options]
addopts = [
    "-vv",
    "--doctest-modules"
]
doctest_optionflags = "NORMALIZE_WHITESPACE"
testpaths = [
    "./tests"
]

[tool.pylint.MASTER]
ignore='docs'

[tool.flake8]
# Rule definitions: http://flake8.pycqa.org/en/latest/user/error-codes.html
# D203: 1 blank line required before class docstring
# W503: line break before binary operator
exclude = ['venv*','__pycache__','node_modules','bower_components','migrations', 'docs']
ignore = ['D203','W503']
max-complexity = 9
# max-line-length = 88
extend-ignore = 'E203'
