[metadata]
name = output_checker
version = 0.0.1
author = Sam and Adam Hollings
author_email = sam.hollings1@nhs.net
description = Code for checking outputs meet disclosure control rules and do not contain PID.
long_description = Code for checking outputs meet disclosure control rules and do not contain PID.
url = https://github.com/SamHollings/output_checker
keywords = output, sdc, pid, pii
license = MIT
license_files = LICENSE.txt
classifiers =
    Programming Language :: Python :: 3

[options]
python_requires = >=3.7, <4
install_requires = file:requirements.txt
package_dir =
    =src
packages=find:

[options.packages.find]
where=src
